@@ -1,0 +1,25 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/babl-0.1.4.ebuild,v 1.1 2011/02/15 20:58:15 hanno Exp $
+
+EAPI="2"
+
+DESCRIPTION="A dynamic, any to any, pixel format conversion library"
+HOMEPAGE="http://www.gegl.org/babl/"
+SRC_URI="ftp://ftp.gimp.org/pub/${PN}/${PV:0:3}/${P}.tar.bz2"
+
+LICENSE="LGPL-3"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris"
+IUSE="sse mmx"
+
+src_configure() {
+	econf $(use_enable mmx) \
+		$(use_enable sse)
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die "emake install failed"
+	find "${ED}" -name '*.la' -delete
+	dodoc AUTHORS ChangeLog README NEWS || die "dodoc failed"
+}
