@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/babl
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.17 2010/02/19 13:41:42 patrick Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/babl/ChangeLog,v 1.18 2011/02/15 20:58:15 hanno Exp $
+
+*babl-0.1.4 (15 Feb 2011)
+
+  15 Feb 2011; Hanno Boeck <hanno@gentoo.org> +babl-0.1.4.ebuild:
+  Version bump.
 
 *babl-0.1.2 (19 Feb 2010)
 
